--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,5 +1,5 @@
 {% extends '_base.html' %}
-{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 {% block content %}
 
   <body class="text-center">
@@ -7,7 +7,7 @@
   <form method="post">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
       {% csrf_token %}
-      {{ form.as_p }}
+      {{ form|crispy }}
     <button class="btn btn-outline-success" type="submit">Sign in</button>
 
   </form>
